--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -34,6 +34,11 @@ default.create.label = Crear {0}
 default.home.label = Inicio
 default.list.label = Listar {0}
 default.new.label = Crear {0}
+default.show.label = Ver {0}
+default.edit.label = Modificar {0}
+default.button.update.label = Guardar Cambios
+default.button.edit.label = Modificar
+default.button.delete.label = Eliminar
 
 # Labels de Dominio
 
