--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -36,6 +36,7 @@ default.list.label = Listar {0}
 default.new.label = Crear {0}
 default.show.label = Ver {0}
 default.edit.label = Modificar {0}
+default.button.create.label = Crear
 default.button.update.label = Guardar Cambios
 default.button.edit.label = Modificar
 default.button.delete.label = Eliminar
