--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -44,6 +44,7 @@ default.button.delete.label = Eliminar
 # Labels de Dominio
 
 alumno.label = Alumno
+claseRequisito.label = Clase Requisito
 com.educacion.alumno.Alumno.apellidoNombre.nullable.error = El nombre y apellido del alumno es obligatorio
 com.educacion.alumno.Alumno.numeroDocumento.nullable.error = El número de documento es obligatorio 
 com.educacion.alumno.Alumno.fechaNacimiento.nullable.error = La fecha de nacimiento es obligatoria
