--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -41,6 +41,11 @@ default.button.update.label = Guardar Cambios
 default.button.edit.label = Modificar
 default.button.delete.label = Eliminar
 
+default.deleted.message = Elminado {0}
+default.created.message = Creado {0}
+default.updated.message = Modificado {0}
+default.record.label = Registro {0}
+
 # Labels de Dominio
 
 alumno.label = Alumno
