--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -41,9 +41,14 @@ default.button.update.label = Guardar Cambios
 default.button.edit.label = Modificar
 default.button.delete.label = Eliminar
 
-default.deleted.message = Elminado {0}
-default.created.message = Creado {0}
-default.updated.message = Modificado {0}
+default.created.message=Registro de {0} con identificador {1} creado
+default.updated.message=Registro de {0} con identificador {1} modificado
+default.deleted.message= Registro de {0} con indentificador {1} eliminado
+default.not.deleted.message=Registro de {0} con identificador {1} no puede ser eliminado
+default.not.found.message=Registro de {0} no encontrado con el identificador {1}
+default.optimistic.locking.failure=Otro usuario estaba modificó el registro de {0} mientras usted estaba editándolo
+
+
 default.record.label = Registro {0}
 
 # Labels de Dominio
