--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -60,4 +60,5 @@ com.educacion.alumno.Alumno.numeroDocumento.nullable.error = El número de docum
 com.educacion.alumno.Alumno.fechaNacimiento.nullable.error = La fecha de nacimiento es obligatoria
 com.medfire.alumno.Alumno.fechaNacimiento.date.error = La fecha de nacimiento debe tener el formato dd/MM/AAAA (Ej.: 30/10/2010)
 typeMismatch.com.educacion.alumno.Alumno.fechaNacimiento = Fecha de Nacimiento Incorrecta 
+com.educacion.alumno.Alumno.photo.validator.error.photo = Recuerde que solo puede cargar imagenes de hasta 250Kb 
 
