--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -55,10 +55,13 @@ default.record.label = Registro {0}
 
 alumno.label = Alumno
 claseRequisito.label = Clase Requisito
+documentoCarrera.label = Documentación Carrera
 com.educacion.alumno.Alumno.apellidoNombre.nullable.error = El nombre y apellido del alumno es obligatorio
 com.educacion.alumno.Alumno.numeroDocumento.nullable.error = El número de documento es obligatorio 
 com.educacion.alumno.Alumno.fechaNacimiento.nullable.error = La fecha de nacimiento es obligatoria
 com.medfire.alumno.Alumno.fechaNacimiento.date.error = La fecha de nacimiento debe tener el formato dd/MM/AAAA (Ej.: 30/10/2010)
 typeMismatch.com.educacion.alumno.Alumno.fechaNacimiento = Fecha de Nacimiento Incorrecta 
-com.educacion.alumno.Alumno.photo.validator.error.photo = Recuerde que solo puede cargar imagenes de hasta 250Kb 
+com.educacion.alumno.Alumno.photo.validator.error.photo = Recuerde que solo puede cargar imagenes de hasta 250Kb
 
+# DocumentoCarrera 
+com.educacion.academico.DocumentoCarrera.imagen.validator.error = El tamaño máximo para una imagen de carrera es de 250 Kb
