--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -47,8 +47,7 @@ default.deleted.message= Registro de {0} con indentificador {1} eliminado
 default.not.deleted.message=Registro de {0} con identificador {1} no puede ser eliminado
 default.not.found.message=Registro de {0} no encontrado con el identificador {1}
 default.optimistic.locking.failure=Otro usuario estaba modificó el registro de {0} mientras usted estaba editándolo
-
-
+default.button.delete.confirm.message=Esta Seguro de que quiere eliminar este Registro?
 default.record.label = Registro {0}
 
 # Labels de Dominio
@@ -56,12 +55,42 @@ default.record.label = Registro {0}
 alumno.label = Alumno
 claseRequisito.label = Clase Requisito
 documentoCarrera.label = Documentación Carrera
+requisito.label = Requisito
+subrequisito.label = Subrequisito
 com.educacion.alumno.Alumno.apellidoNombre.nullable.error = El nombre y apellido del alumno es obligatorio
 com.educacion.alumno.Alumno.numeroDocumento.nullable.error = El número de documento es obligatorio 
 com.educacion.alumno.Alumno.fechaNacimiento.nullable.error = La fecha de nacimiento es obligatoria
 com.medfire.alumno.Alumno.fechaNacimiento.date.error = La fecha de nacimiento debe tener el formato dd/MM/AAAA (Ej.: 30/10/2010)
 typeMismatch.com.educacion.alumno.Alumno.fechaNacimiento = Fecha de Nacimiento Incorrecta 
 com.educacion.alumno.Alumno.photo.validator.error.photo = Recuerde que solo puede cargar imagenes de hasta 250Kb
+
+# Clase Requisitos
+
+com.educacion.academico.ClaseRequisito.descripcion.nullable.error = La descripción es obligatoria
+com.educacion.academico.ClaseRequisito.descripcion.blank.error = La descripción es obligatoria
+
+
+# Requisitos
+com.educacion.academico.Requisito.descripcion.nullable.error = La descripción es obligatoria
+com.educacion.academico.Requisito.descripcion.blank.error = La descripción es obligatoria
+com.educacion.academico.Requisito.claseRequisito.nullable.error = La clase de requisito es obligatoria
+com.educacion.academico.Requisito.claseRequisito.blank.error = La clase de requisito es obligatoria
+
+# Carrera
+com.educacion.academico.Carrera.campoOcupacional.nullable.error = Campo Ocupacional es obligatorio
+com.educacion.academico.Carrera.campoOcupacional.blank.error = Campo Ocupacional es obligatorio
+com.educacion.academico.Carrera.denominacion.nullable.error = Campo Ocupacional es obligatorio
+com.educacion.academico.Carrera.denominacion.blank.error = Campo Ocupacional es obligatorio
+
+# Materia
+com.educacion.academico.Materia.denominacion.nullable.error = La denominación de la materia es obligatoria
+com.educacion.academico.Materia.denominacion.blank.error = La denominación de la materia es obligatoria
+com.educacion.academico.Materia.descripcion.nullable.error = La descripción de la materia es obligatoria
+com.educacion.academico.Materia.descripcion.blank.error = La descripción de la materia es obligatoria
+com.educacion.academico.Materia.codigo.nullable.error = El código de la materia es obligatoria
+com.educacion.academico.Materia.codigo.blank.error = El código de la materia es obligatoria
+
+ 
 
 # DocumentoCarrera 
 com.educacion.academico.DocumentoCarrera.imagen.validator.error = El tamaño máximo para una imagen de carrera es de 250 Kb
