--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -57,7 +57,10 @@ claseRequisito.label = Clase Requisito
 documentoCarrera.label = Documentación Carrera
 requisito.label = Requisito
 subrequisito.label = Subrequisito
+com.educacion.alumno.register = Preinscripción de alumno
+educacion.alumno.registracion.completa = Sus datos fueron registrados
 com.educacion.alumno.Alumno.apellidoNombre.nullable.error = El nombre y apellido del alumno es obligatorio
+com.educacion.alumno.Alumno.apellidoNombre.blank.error = El nombre y apellido del alumno es obligatorio
 com.educacion.alumno.Alumno.numeroDocumento.nullable.error = El número de documento es obligatorio 
 com.educacion.alumno.Alumno.fechaNacimiento.nullable.error = La fecha de nacimiento es obligatoria
 com.medfire.alumno.Alumno.fechaNacimiento.date.error = La fecha de nacimiento debe tener el formato dd/MM/AAAA (Ej.: 30/10/2010)
