--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -58,6 +58,8 @@ documentoCarrera.label = Documentación Carrera
 requisito.label = Requisito
 subrequisito.label = Subrequisito
 com.educacion.alumno.register = Preinscripción de alumno
+		#-----Seguridad----
+requestmapGroup.label = Grupo de Peticiones		
 educacion.alumno.registracion.completa = Sus datos fueron registrados
 com.educacion.alumno.Alumno.apellidoNombre.nullable.error = El nombre y apellido del alumno es obligatorio
 com.educacion.alumno.Alumno.apellidoNombre.blank.error = El nombre y apellido del alumno es obligatorio
@@ -92,6 +94,7 @@ com.educacion.academico.Materia.descripcion.nullable.error = La descripción de 
 com.educacion.academico.Materia.descripcion.blank.error = La descripción de la materia es obligatoria
 com.educacion.academico.Materia.codigo.nullable.error = El código de la materia es obligatoria
 com.educacion.academico.Materia.codigo.blank.error = El código de la materia es obligatoria
+
 
  
 
