--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -68,6 +68,7 @@ com.educacion.alumno.Alumno.fechaNacimiento.nullable.error = La fecha de nacimie
 com.medfire.alumno.Alumno.fechaNacimiento.date.error = La fecha de nacimiento debe tener el formato dd/MM/AAAA (Ej.: 30/10/2010)
 typeMismatch.com.educacion.alumno.Alumno.fechaNacimiento = Fecha de Nacimiento Incorrecta 
 com.educacion.alumno.Alumno.photo.validator.error.photo = Recuerde que solo puede cargar imagenes de hasta 250Kb
+com.educacion.seguridad.Role.authority.unique.error.authority = El nombre del rol debe ser único
 
 # Clase Requisitos
 
