--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -59,6 +59,7 @@ requisito.label = Requisito
 subrequisito.label = Subrequisito
 com.educacion.alumno.register = Preinscripción de alumno
 		#-----Seguridad----
+role.authority.label = Nombre del Rol		
 requestmapGroup.label = Grupo de Peticiones		
 educacion.alumno.registracion.completa = Sus datos fueron registrados
 com.educacion.alumno.Alumno.apellidoNombre.nullable.error = El nombre y apellido del alumno es obligatorio
@@ -69,6 +70,8 @@ com.medfire.alumno.Alumno.fechaNacimiento.date.error = La fecha de nacimiento de
 typeMismatch.com.educacion.alumno.Alumno.fechaNacimiento = Fecha de Nacimiento Incorrecta 
 com.educacion.alumno.Alumno.photo.validator.error.photo = Recuerde que solo puede cargar imagenes de hasta 250Kb
 com.educacion.seguridad.Role.authority.unique.error.authority = El nombre del rol debe ser único
+com.educacion.seguridad.Role.authority.validator.invalid = Ingrese una Rol válido 
+com.educacion.alumno.Role.authority.blank.error = El nombre del Rol es obligatorio
 
 # Clase Requisitos
 
