--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -41,7 +41,7 @@ default.button.update.label = Guardar Cambios
 default.button.edit.label = Modificar
 default.button.delete.label = Eliminar
 
-default.created.message=Registro de {0} con identificador {1} creado
+default.created.message=Se guardó un registro de {0} {1}
 default.updated.message=Registro de {0} con identificador {1} modificado
 default.deleted.message= Registro de {0} con indentificador {1} eliminado
 default.not.deleted.message=Registro de {0} con identificador {1} no puede ser eliminado
@@ -114,10 +114,13 @@ com.educacion.academico.Requisito.claseRequisito.nullable.error = La clase de re
 com.educacion.academico.Requisito.claseRequisito.blank.error = La clase de requisito es obligatoria
 
 # Carrera
+com.educacion.academico.Carrera.flash.message.aniolectivo = No hay ningún año lectivo disponible para la carrera {0}
 com.educacion.academico.Carrera.campoOcupacional.nullable.error = Campo Ocupacional es obligatorio
 com.educacion.academico.Carrera.campoOcupacional.blank.error = Campo Ocupacional es obligatorio
 com.educacion.academico.Carrera.denominacion.nullable.error = Campo Ocupacional es obligatorio
 com.educacion.academico.Carrera.denominacion.blank.error = Campo Ocupacional es obligatorio
+com.educacion.academico.Carrera.duracion.blank.error = Duración de la carrera es obligatorio
+com.educacion.academico.Carrera.duracion.nullable.error = Duración de la carrera es obligatorio
 
 # Materia
 com.educacion.academico.Materia.denominacion.nullable.error = La denominación de la materia es obligatoria
@@ -137,3 +140,10 @@ com.educacion.academico.DocumentoCarrera.imagen.validator.error = El tamaño má
 # User
 com.educacion.seguridad.User.password.blank.error = La contraseña es obligatoria
 com.educacion.seguridad.User.username.blank.error = El nombre de usuario es obligatorio
+
+# Inscripcion
+com.educacion.academico.Inscripcion.alumno.blank.error = Indique el alumno al que desea inscribir
+com.educacion.academico.Inscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
+com.educacion.academico.Preinscripcion.alumno.blank.error = Indique el alumno al que desea inscribir
+com.educacion.academico.Preinscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
+
