--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -41,8 +41,8 @@ default.button.update.label = Guardar Cambios
 default.button.edit.label = Modificar
 default.button.delete.label = Eliminar
 
-default.created.message=Se guardó un registro de {0} {1}
-default.updated.message=Registro de {0} con identificador {1} modificado
+default.created.message=Se guardó un registro de {0}
+default.updated.message=Se modificaron los datos del registro de {0}
 default.deleted.message= Registro de {0} con indentificador {1} eliminado
 default.not.deleted.message=Registro de {0} con identificador {1} no puede ser eliminado
 default.not.found.message=Registro de {0} no encontrado con el identificador {1}
@@ -146,4 +146,7 @@ com.educacion.academico.Inscripcion.alumno.blank.error = Indique el alumno al qu
 com.educacion.academico.Inscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.blank.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
+
+# Preinscripcion
+preinscripcion.anioLectivo.label = Añoo Lectivo
 
