--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -2,7 +2,7 @@ default.doesnt.match.message=La propiedad [{0}] de la clase [{1}] con valor [{2}
 default.invalid.url.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no es una URL válida
 default.invalid.creditCard.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no es un número de tarjeta de crédito válida
 default.invalid.email.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no es una dirección de correo electrónico válida
-default.invalid.range.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no entra en el rango válido de [{3}] a [{4}]
+default.invalid.range.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no entra en el rango válido de [{0}] a [{4}]
 default.invalid.size.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] no entra en el tamaño válido de [{3}] a [{4}]
 default.invalid.max.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] excede el valor máximo [{3}]
 default.invalid.min.message=La propiedad [{0}] de la clase [{1}] con valor [{2}] es menos que el valor mínimo [{3}]
@@ -113,6 +113,10 @@ com.educacion.academico.Requisito.descripcion.blank.error = La descripción es o
 com.educacion.academico.Requisito.claseRequisito.nullable.error = La clase de requisito es obligatoria
 com.educacion.academico.Requisito.claseRequisito.blank.error = La clase de requisito es obligatoria
 
+# Subrequisitos
+com.educacion.academico.SubRequisito.descripcion.size.error = La descripción del Sub requisito es demasiado larga
+
+
 # Carrera
 com.educacion.academico.Carrera.flash.message.aniolectivo = No hay ningún año lectivo disponible para la carrera {0}
 com.educacion.academico.Carrera.campoOcupacional.nullable.error = Campo Ocupacional es obligatorio
@@ -121,6 +125,10 @@ com.educacion.academico.Carrera.denominacion.nullable.error = Campo Ocupacional 
 com.educacion.academico.Carrera.denominacion.blank.error = Campo Ocupacional es obligatorio
 com.educacion.academico.Carrera.duracion.blank.error = Duración de la carrera es obligatorio
 com.educacion.academico.Carrera.duracion.nullable.error = Duración de la carrera es obligatorio
+com.educacion.academico.Carrera.campoOcupacional.size.error = La cantidad máxima de caracteres es [{4}]
+com.educacion.academico.Carrera.denominacion.size.error = La cantidad máxima de caracteres es [{4}]
+
+
 
 # Materia
 com.educacion.academico.Materia.denominacion.nullable.error = La denominación de la materia es obligatoria
