--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -51,8 +51,11 @@ default.button.delete.confirm.message=Esta Seguro de que quiere eliminar este Re
 default.record.label = Registro {0}
 
 # Labels de Dominio
-
+#Alumno
 alumno.label = Alumno
+alumno.numeroDocumento.label = Número de Documento
+
+#Clase Requisito
 claseRequisito.label = Clase Requisito
 documentoCarrera.label = Documentación Carrera
 requisito.label = Requisito
