--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -50,7 +50,7 @@ default.optimistic.locking.failure=Otro usuario estaba modificó el registro de 
 default.button.delete.confirm.message=Esta Seguro de que quiere eliminar este Registro?
 default.record.label = Registro {0}
 
-# Labels de Dominio
+#--------------------------------------------------- Labels de Dominio----------------------------------------
 #Alumno
 alumno.label = Alumno
 alumno.numeroDocumento.label = Número de Documento
@@ -62,7 +62,15 @@ requisito.label = Requisito
 subrequisito.label = Subrequisito
 com.educacion.alumno.register = Preinscripción de alumno
 user.label = Usuario
-		#-----Seguridad----
+#Preinscripcion
+preinscripcion.label = Preinscripción
+preinscripcion.confirminscripcion.title = Confirmación de Inscripción
+preinscripcion.button.inscribir = Inscribir
+preinscripcion.id.label = Número de Preinscripción
+preinscripcion.anioLectivo.label = Año Lectivo
+
+
+#------------------------------------------------------Seguridad------------------------------------------------------
 #---internationalization del plugin ---
 springSecurity.errors.login.expired = Su cuenta ha expirado
 springSecurity.errors.login.passwordExpired = Su cuenta ha expirado
@@ -92,7 +100,13 @@ default.button.search.label = Buscar
 		
 role.authority.label = Nombre del Rol		
 requestmapGroup.label = Grupo de Peticiones		
+
+
+#-------------------------------Message Code de Validacion----------------------------------------------------------------
+
 educacion.alumno.registracion.completa = Sus datos fueron registrados
+
+# Alumno
 com.educacion.alumno.Alumno.apellidoNombre.nullable.error = El nombre y apellido del alumno es obligatorio
 com.educacion.alumno.Alumno.apellidoNombre.blank.error = El nombre y apellido del alumno es obligatorio
 com.educacion.alumno.Alumno.numeroDocumento.nullable.error = El número de documento es obligatorio 
@@ -103,6 +117,7 @@ com.educacion.alumno.Alumno.photo.validator.error.photo = Recuerde que solo pued
 com.educacion.seguridad.Role.authority.unique.error.authority = El nombre del rol debe ser único
 com.educacion.seguridad.Role.authority.validator.invalid = Ingrese una Rol válido 
 com.educacion.alumno.Role.authority.blank.error = El nombre del Rol es obligatorio
+
 
 # Clase Requisitos
 
@@ -158,6 +173,6 @@ com.educacion.academico.Inscripcion.alumno.nullable.error = Indique el alumno al
 com.educacion.academico.Preinscripcion.alumno.blank.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
 
-# Preinscripcion
-preinscripcion.anioLectivo.label = Añoo Lectivo
+
+
 
