--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -172,6 +172,7 @@ com.educacion.academico.Inscripcion.alumno.blank.error = Indique el alumno al qu
 com.educacion.academico.Inscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.blank.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
+com.educacion.academico.Preinscripcion.estado.inscripto = El alumno {0} documento {1} ya está inscripto
 
 
 
