--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -64,11 +64,13 @@ com.educacion.alumno.register = Preinscripción de alumno
 user.label = Usuario
 #Preinscripcion
 preinscripcion.label = Preinscripción
-preinscripcion.confirminscripcion.title = Confirmación de Inscripción
+preinscripcion.confirminscripcion.title = Matriculación
 preinscripcion.button.inscribir = Inscribir
 preinscripcion.id.label = Número de Preinscripción
 preinscripcion.anioLectivo.label = Año Lectivo
 
+#Inscripcion Materia
+inscripcionmateria.seleccionalumno = Seleccione el Alumno para la Inscripción de Materia
 
 #------------------------------------------------------Seguridad------------------------------------------------------
 #---internationalization del plugin ---
@@ -81,6 +83,9 @@ springSecurity.login.title = Ingreso al Sistema
 springSecurity.login.header = Por favor ingrese al sistema
 springSecurity.login.button = Ingresar
 springSecurity.login.username.label = Nombre de Usuario
+spring.security.ui.login.username = Usuario
+spring.security.ui.login.password = Contraseña
+spring.security.ui.login.rememberme = No cerrar sesión
 springSecurity.login.password.label = Contraseña
 springSecurity.login.remember.me.label = Recordar usuario y contraseña
 springSecurity.denied.title = Acceso denegado
@@ -95,7 +100,11 @@ spring.security.ui.user.search = Búsqueda de Usuario
 spring.security.ui.search.true = Si
 spring.security.ui.search.false = No
 spring.security.ui.search.either = Cualquiera
+spring.security.ui.login.signin = Ingreso al Sistema 
+spring.security.ui.login.forgotPassword = Olvidó su contraseña
+
 default.button.search.label = Buscar
+
 
 		
 role.authority.label = Nombre del Rol		
