--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -66,6 +66,7 @@ user.label = Usuario
 preinscripcion.label = Preinscripción
 preinscripcion.confirminscripcion.title = Matriculación
 preinscripcion.button.inscribir = Inscribir
+preinscripcion.button.matricular = Matricular
 preinscripcion.id.label = Número de Preinscripción
 preinscripcion.anioLectivo.label = Año Lectivo
 
@@ -182,7 +183,10 @@ com.educacion.academico.Inscripcion.alumno.nullable.error = Indique el alumno al
 com.educacion.academico.Preinscripcion.alumno.blank.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.estado.inscripto = El alumno {0} documento {1} ya está inscripto
+com.educacion.academico.Preinscripcion.alumno.unique.error = El Alumno ya tiene una inscripción cargada
+com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los años lectivos deben ser únicos 
 
+# Preinscripcion
 
 
 
