--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -108,8 +108,15 @@ default.button.search.label = Buscar
 
 
 		
-role.authority.label = Nombre del Rol		
+role.authority.label = Nombre del Rol		 
 requestmapGroup.label = Grupo de Peticiones		
+
+# Inscripcion Materia
+inscripcionMateria.label = Inscripción de Materias
+inscripcionMateria.id.label = Nro.Insc. de Materia
+inscripcionMateria.alumno.label = Alumno
+inscripcionMateria.carrera.label = Carrera
+inscripcionMateria.fechaAlta.label = Fecha de Alta
 
 
 #-------------------------------Message Code de Validacion----------------------------------------------------------------
@@ -182,11 +189,13 @@ com.educacion.academico.Inscripcion.alumno.blank.error = Indique el alumno al qu
 com.educacion.academico.Inscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.blank.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
-com.educacion.academico.Preinscripcion.estado.inscripto = El alumno {0} documento {1} ya está inscripto
+com.educacion.academico.Preinscripcion.estado.inscripto = El alumno {0} documento {1} ya está matriculado
 com.educacion.academico.Preinscripcion.alumno.unique.error = El Alumno ya tiene una inscripción cargada
 com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los años lectivos deben ser únicos 
 
 # Preinscripcion
+
+
 
 
 
