--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -71,6 +71,7 @@ preinscripcion.id.label = Número de Preinscripción
 preinscripcion.anioLectivo.label = Año Lectivo
 
 #Inscripcion Materia
+inscripcionmateria.label = Inscripción de Materia
 inscripcionmateria.seleccionalumno = Seleccione el Alumno para la Inscripción de Materia
 
 #------------------------------------------------------Seguridad------------------------------------------------------
@@ -197,5 +198,7 @@ com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los a
 
 
 
+# InscripcionMateria
+com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumno no tiene ninguna matriculación
 
 
