--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -194,11 +194,15 @@ com.educacion.academico.Preinscripcion.estado.inscripto = El alumno {0} document
 com.educacion.academico.Preinscripcion.alumno.unique.error = El Alumno ya tiene una inscripción cargada
 com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los años lectivos deben ser únicos 
 
+
 # Preinscripcion
 
 
 
 # InscripcionMateria
 com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumno no tiene ninguna matriculación
+com.educacion.academico.InscripcionMateriaDetalle.inscripcion.maxsize = El alumno tiene mas de una inscripción en la materia {0}
+com.educacion.academico.InscripcionMateriaDetalle.materia.blank.error = El alumno no tiene {0} la materia {1}
+com.educacion.academico.InscripcionMateriaDetalle.materia.maxsize.error = El alumno no tiene {0} la materia {1} mas de una vez
 
 
