--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -204,5 +204,5 @@ com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumn
 com.educacion.academico.InscripcionMateriaDetalle.inscripcion.maxsize = El alumno tiene mas de una inscripción en la materia {0}
 com.educacion.academico.InscripcionMateriaDetalle.materia.blank.error = El alumno no tiene {0} la materia {1}
 com.educacion.academico.InscripcionMateriaDetalle.materia.maxsize.error = El alumno no tiene {0} la materia {1} mas de una vez
-
+com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error.materia = Una Inscripción de materia no puede tener materias repetidas
 
