--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -201,8 +201,12 @@ com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los a
 
 # InscripcionMateria
 com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumno no tiene ninguna matriculación
+
+# InscripcionMateriaDetalle
+com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error = La materia {0} existe más de una vez en la inscripción 
 com.educacion.academico.InscripcionMateriaDetalle.inscripcion.maxsize = El alumno tiene mas de una inscripción en la materia {0}
 com.educacion.academico.InscripcionMateriaDetalle.materia.blank.error = El alumno no tiene {0} la materia {1}
 com.educacion.academico.InscripcionMateriaDetalle.materia.maxsize.error = El alumno no tiene {0} la materia {1} mas de una vez
 com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error.materia = Una Inscripción de materia no puede tener materias repetidas
+
 
