--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -201,6 +201,7 @@ com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los a
 
 # InscripcionMateria
 com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumno no tiene ninguna matriculación
+incripcionMateria.cursar.label = Registrar Inscripción de Materias para Cursar 
 
 # InscripcionMateriaDetalle
 com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error = La materia {0} existe más de una vez en la inscripción 
