--- a/saie/grails-app/i18n/messages.properties
+++ b/saie/grails-app/i18n/messages.properties
@@ -1,3 +1,7 @@
+caratula.institucion.nombre=CRUZ ROJA CORDOBA - ARGENTINA
+caratula.institucion.direccion=Mendoza 988 Córdoba
+caratula.institucion.telefono=Tel: 0381-155465637 CP: 4000
+
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
 default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
