--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -208,6 +208,7 @@ com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los a
 
 # InscripcionMateria
 com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumno no tiene ninguna matriculación
+com.educacion.academico.InscripcionMateria.materias.blank.error = No tiene ninguna materia disponible para inscripcion
 incripcionMateria.cursar.label = Registrar Inscripción de Materias para Cursar 
 
 # InscripcionMateriaDetalle
