--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -125,6 +125,7 @@ inscripcionMateria.fechaAlta.label = Fecha de Alta
 
 # Inscripcion Matricula
 inscripcionMatricula.label = Inscripción de Matrículas de Alumnos Existentes
+com.educacion.inscripcion.InscripcionMatricula.error.inscripcionmateria = La Matrícula no tiene ninguna inscripción de materia
 
 
 #-------------------------------Message Code de Validacion----------------------------------------------------------------
