--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -126,6 +126,7 @@ inscripcionMateria.fechaAlta.label = Fecha de Alta
 # Inscripcion Matricula
 inscripcionMatricula.label = Inscripción de Matrículas de Alumnos Existentes
 com.educacion.inscripcion.InscripcionMatricula.error.inscripcionmateria = La Matrícula no tiene ninguna inscripción de materia
+unique.error.com.educacion.alumno.Alumno = Ya existe una Matrícula para este alumno en esta carrera y en este año lectivo
 
 
 #-------------------------------Message Code de Validacion----------------------------------------------------------------
