--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -200,6 +200,7 @@ com.educacion.academico.Inscripcion.alumno.nullable.error = Indique el alumno al
 com.educacion.academico.Preinscripcion.alumno.blank.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.alumno.nullable.error = Indique el alumno al que desea inscribir
 com.educacion.academico.Preinscripcion.estado.inscripto = El alumno {0} documento {1} ya está matriculado
+com.educacion.academico.Preinscripcion.estado.anulado = El alumno {0} documento {1} tiene anulada la preinscripción
 com.educacion.academico.Preinscripcion.alumno.unique.error = El Alumno ya tiene una inscripción cargada
 com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los años lectivos deben ser únicos 
 
