--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -174,7 +174,6 @@ com.educacion.academico.Carrera.campoOcupacional.size.error = La cantidad máxim
 com.educacion.academico.Carrera.denominacion.size.error = La cantidad máxima de caracteres es [{4}]
 
 
-
 # Materia
 com.educacion.academico.Materia.denominacion.nullable.error = La denominación de la materia es obligatoria
 com.educacion.academico.Materia.denominacion.blank.error = La denominación de la materia es obligatoria
@@ -182,7 +181,7 @@ com.educacion.academico.Materia.descripcion.nullable.error = La descripción de 
 com.educacion.academico.Materia.descripcion.blank.error = La descripción de la materia es obligatoria
 com.educacion.academico.Materia.codigo.nullable.error = El código de la materia es obligatoria
 com.educacion.academico.Materia.codigo.blank.error = El código de la materia es obligatoria
-
+duracionMateria.label = Duración de Materia
 
  
 
