--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -78,6 +78,9 @@ preinscripcion.anioLectivo.label = Año Lectivo
 inscripcionmateria.label = Inscripción de Materia
 inscripcionmateria.seleccionalumno = Seleccione el Alumno para la Inscripción de Materia
 
+#Inscripcion Materia Detalle
+com.educacion.academico.InscripcionMateriaDetalle.unique.error
+
 #------------------------------------------------------Seguridad------------------------------------------------------
 #---internationalization del plugin ---
 springSecurity.errors.login.expired = Su cuenta ha expirado
