--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -130,6 +130,8 @@ inscripcionMateria.fechaAlta.label = Fecha de Alta
 inscripcionMatricula.label = Inscripción de Matrículas de Alumnos Existentes
 com.educacion.inscripcion.InscripcionMatricula.error.inscripcionmateria = La Matrícula no tiene ninguna inscripción de materia
 unique.error.com.educacion.alumno.Alumno = Ya existe una Matrícula para este alumno en esta carrera y en este año lectivo
+com.educacion.academico.InscripcionMatricula.inscripcionesmaterias.size.error = No hay inscripciones de materias cargadas
+
 
 
 #-------------------------------Message Code de Validacion----------------------------------------------------------------
@@ -214,6 +216,7 @@ com.educacion.academico.Carrera.anios.validator.error.anios = Recuerde que los a
 # InscripcionMateria
 com.educacion.academico.InscripcionMateria.preinscripcion.blank.error = El alumno no tiene ninguna matriculación
 com.educacion.academico.InscripcionMateria.materias.blank.error = No tiene ninguna materia disponible para inscripcion
+com.educacion.academico.InscripcionMateria.detalleMateria.size.error = No hay ninguna materia seleccionada en el detalle de la inscripción
 
 incripcionMateria.cursar.label = Registrar Inscripción de Materias para Cursar 
 
