--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -79,7 +79,7 @@ inscripcionmateria.label = Inscripción de Materia
 inscripcionmateria.seleccionalumno = Seleccione el Alumno para la Inscripción de Materia
 
 #Inscripcion Materia Detalle
-com.educacion.academico.InscripcionMateriaDetalle.unique.error
+com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error = El alumno ya tiene una inscripción para la materia {0}
 
 #------------------------------------------------------Seguridad------------------------------------------------------
 #---internationalization del plugin ---
@@ -225,6 +225,8 @@ com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error = La mate
 com.educacion.academico.InscripcionMateriaDetalle.inscripcion.maxsize = El alumno tiene mas de una inscripción en la materia {0}
 com.educacion.academico.InscripcionMateriaDetalle.materia.blank.error = El alumno no tiene {0} la materia {1}
 com.educacion.academico.InscripcionMateriaDetalle.materia.maxsize.error = El alumno no tiene {0} la materia {1} mas de una vez
-com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error.materia = Una Inscripción de materia no puede tener materias repetidas
+com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error.materia = Ya exite la inscripcion para {7} de la materia {3} en la carrera {5} en el año lectivo {6} para este alumno 
+
+
 
 
