--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -177,7 +177,7 @@ com.educacion.academico.Carrera.duracion.blank.error = Duración de la carrera e
 com.educacion.academico.Carrera.duracion.nullable.error = Duración de la carrera es obligatorio
 com.educacion.academico.Carrera.campoOcupacional.size.error = La cantidad máxima de caracteres es [{4}]
 com.educacion.academico.Carrera.denominacion.size.error = La cantidad máxima de caracteres es [{4}]
-
+carrera.modalidadFormacion.label = Modalidad
 
 # Materia
 com.educacion.academico.Materia.denominacion.nullable.error = La denominación de la materia es obligatoria
