--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -139,9 +139,11 @@ com.educacion.academico.InscripcionMatricula.inscripcionesmaterias.size.error = 
 educacion.alumno.registracion.completa = Sus datos fueron registrados
 
 # Alumno
-com.educacion.alumno.Alumno.apellidoNombre.nullable.error = El nombre y apellido del alumno es obligatorio
-com.educacion.alumno.Alumno.apellidoNombre.blank.error = El nombre y apellido del alumno es obligatorio
-com.educacion.alumno.Alumno.numeroDocumento.nullable.error = El número de documento es obligatorio 
+com.educacion.alumno.Alumno.apellido.nullable.error = El Apellido del alumno es obligatorio
+com.educacion.alumno.Alumno.apellido.blank.error = El Apellido del alumno es obligatorio
+com.educacion.alumno.Alumno.nombre.nullable.error = El Nombre del alumno es obligatorio
+com.educacion.alumno.Alumno.nombre.blank.error = El Nombre del alumno es obligatorio
+com.educacion.alumno.Alumno.numeroDocumento.nullable.error = El número de documento es obligatorio
 com.educacion.alumno.Alumno.fechaNacimiento.nullable.error = La fecha de nacimiento es obligatoria
 com.medfire.alumno.Alumno.fechaNacimiento.date.error = La fecha de nacimiento debe tener el formato dd/MM/AAAA (Ej.: 30/10/2010)
 typeMismatch.com.educacion.alumno.Alumno.fechaNacimiento = Fecha de Nacimiento Incorrecta 
@@ -177,6 +179,7 @@ com.educacion.academico.Carrera.duracion.blank.error = Duración de la carrera e
 com.educacion.academico.Carrera.duracion.nullable.error = Duración de la carrera es obligatorio
 com.educacion.academico.Carrera.campoOcupacional.size.error = La cantidad máxima de caracteres es [{4}]
 com.educacion.academico.Carrera.denominacion.size.error = La cantidad máxima de caracteres es [{4}]
+com.educacion.academico.Carrera.niveles.esprimernivel.unique.error = Solo un nivel puede ser nivel introductorio
 carrera.modalidadFormacion.label = Modalidad
 
 # Materia
