--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -181,6 +181,10 @@ com.educacion.academico.Carrera.campoOcupacional.size.error = La cantidad máxim
 com.educacion.academico.Carrera.denominacion.size.error = La cantidad máxima de caracteres es [{4}]
 com.educacion.academico.Carrera.niveles.esprimernivel.unique.error = Solo un nivel puede ser nivel introductorio
 carrera.modalidadFormacion.label = Modalidad
+carrera.label = Carrera
+
+# Nivel
+nivel.label = Nivel
 
 # Materia
 com.educacion.academico.Materia.denominacion.nullable.error = La denominación de la materia es obligatoria
@@ -190,6 +194,8 @@ com.educacion.academico.Materia.descripcion.blank.error = La descripción de la 
 com.educacion.academico.Materia.codigo.nullable.error = El código de la materia es obligatoria
 com.educacion.academico.Materia.codigo.blank.error = El código de la materia es obligatoria
 duracionMateria.label = Duración de Materia
+materia.calificaciones.create.label = Actualización de Calificaciones
+
 
  
 
