--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -195,6 +195,7 @@ com.educacion.academico.Materia.codigo.nullable.error = El código de la materia
 com.educacion.academico.Materia.codigo.blank.error = El código de la materia es obligatoria
 duracionMateria.label = Duración de Materia
 materia.calificaciones.create.label = Actualización de Calificaciones
+materia.label = Materia
 
 
  
