--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -67,7 +67,7 @@ subrequisito.label = Subrequisito
 com.educacion.alumno.register = Preinscripción de alumno
 user.label = Usuario
 #Preinscripcion
-preinscripcion.label = Preinscripción
+preinscripcion.label = Ingreso
 preinscripcion.confirminscripcion.title = Matriculación
 preinscripcion.button.inscribir = Inscribir
 preinscripcion.button.matricular = Matricular
@@ -78,8 +78,6 @@ preinscripcion.anioLectivo.label = Año Lectivo
 inscripcionmateria.label = Inscripción de Materia
 inscripcionmateria.seleccionalumno = Seleccione el Alumno para la Inscripción de Materia
 
-#Inscripcion Materia Detalle
-com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error = El alumno ya tiene una inscripción para la materia {0}
 
 #------------------------------------------------------Seguridad------------------------------------------------------
 #---internationalization del plugin ---
@@ -131,6 +129,7 @@ inscripcionMatricula.label = Inscripción de Matrículas de Alumnos Existentes
 com.educacion.inscripcion.InscripcionMatricula.error.inscripcionmateria = La Matrícula no tiene ninguna inscripción de materia
 unique.error.com.educacion.alumno.Alumno = Ya existe una Matrícula para este alumno en esta carrera y en este año lectivo
 com.educacion.academico.InscripcionMatricula.inscripcionesmaterias.size.error = No hay inscripciones de materias cargadas
+preinscripcion.update.estado.error = No se puede modificar un ingreso con estado {0}
 
 
 
