--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -237,5 +237,16 @@ com.educacion.academico.InscripcionMateriaDetalle.materia.maxsize.error = El alu
 com.educacion.academico.InscripcionMateriaDetalle.materia.unique.error.materia = Ya exite la inscripcion para {7} de la materia {3} en la carrera {5} en el año lectivo {6} para este alumno 
 
 
+# Docente
+docente.paisNacimiento.label = Pais
+docente.provinciaNacimiento.label = Provincia
+docente.label = Docente
+docente.tipoDocumento.label = Tipo Documento
+docente.numeroDocumento.label = Número de documento
+docente.localidadDomicilio.label = Localidad
+docente.provinciaDomicilio.label = Provincia
+docente.paisDomicilio.label = Pais
+
+
 
 
