--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -68,9 +68,9 @@ com.educacion.alumno.register = Preinscripción de alumno
 user.label = Usuario
 #Preinscripcion
 preinscripcion.label = Ingreso
-preinscripcion.confirminscripcion.title = Matriculación
+preinscripcion.confirminscripcion.title = Confirmar Ingreso
 preinscripcion.button.inscribir = Inscribir
-preinscripcion.button.matricular = Matricular
+preinscripcion.button.matricular = Confirmar Ingreso
 preinscripcion.id.label = Número de Preinscripción
 preinscripcion.anioLectivo.label = Año Lectivo
 
