--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -246,6 +246,35 @@ docente.numeroDocumento.label = Número de documento
 docente.localidadDomicilio.label = Localidad
 docente.provinciaDomicilio.label = Provincia
 docente.paisDomicilio.label = Pais
+com.educacion.academico.Docente.numeroDocumento.nullable.error = Número de Documento Obligatorio
+com.educacion.academico.Docente.apellido.blank.error = Apellido es Obligatorio
+com.educacion.academico.Docente.nombre.blank.error = El nombre es Obligatorio
+docente.id.label = Identificador de Docente
+docente.apellido.label = Apellido del Docente
+docente.nombre.label = Nombre del Docente
+docente.barrioDomicilio.label = Barrio
+docente.calleDomicilio.label = Calle
+docente.codigoPostalDomicilio.label = Código Postal
+docente.email.label = E-mail
+docente.fechaNacimiento.label = Fecha Nacimiento
+docente.numeroDomicilio.label = Número Domicilio
+docente.sexo.label = Sexo
+docente.telefonoCelular.label = Teléfono Celular
+docente.telefonoParticular.label = Teléfono Particular
+docente.telefonoMensaje.label = Teléfono para Mensajes
+
+# Examen
+examen.label = Exámen
+examen.carrera.label = Carrera
+examen.nivel.label = Nivel
+examen.materia.label = Materia
+examen.docente.label= Docente
+examen.titulo.label = Título
+examen.modalidad.label = Modalidad
+examen.fecha.label = Fecha
+examen.tipo.label = Tipo
+
+
 
 
 
