--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -275,6 +275,14 @@ examen.fecha.label = Fecha
 examen.tipo.label = Tipo
 
 
+# ExamenCommand
+
+com.educacion.academico.ExamenCommand.nivelId.blank = Indique un nivel
+com.educacion.academico.ExamenCommand.carreraId.blank = Indique una carrera
+com.educacion.academico.ExamenCommand.materiaId.blank = Indique una materia
+com.educacion.academico.ExamenCommand.docenteId.nullable = Indique un docente
+com.educacion.academico.ExamenCommand.docenteId.blank = Indique un docente
+
 
 
 
