--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -283,7 +283,11 @@ com.educacion.academico.ExamenCommand.materiaId.blank = Indique una materia
 com.educacion.academico.ExamenCommand.docenteId.nullable = Indique un docente
 com.educacion.academico.ExamenCommand.docenteId.blank = Indique un docente
 
+# AsignaturaDocente
 
+asignaturaDocente.anioLectivo.label = Año Lectivo
+asignaturaDocente.docente.label = Docente
+asignaturaDocente.carrera.label = Carrera
 
 
 
