--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -73,6 +73,7 @@ preinscripcion.button.inscribir = Inscribir
 preinscripcion.button.matricular = Confirmar Ingreso
 preinscripcion.id.label = Número de Preinscripción
 preinscripcion.anioLectivo.label = Año Lectivo
+com.educacion.Preinscripcion.delete.restriction = No puede eliminar una Preinscripción con estado {0}
 
 #Inscripcion Materia
 inscripcionmateria.label = Inscripción de Materia
