--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -289,6 +289,8 @@ com.educacion.academico.ExamenCommand.docenteId.blank = Indique un docente
 asignaturaDocente.anioLectivo.label = Año Lectivo
 asignaturaDocente.docente.label = Docente
 asignaturaDocente.carrera.label = Carrera
+asignaturaDocente.fechaAlta.label = Fecha de Alta
+asignaturaDocente.materias.label = Materias Asignadas
 
 
 
