--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -291,6 +291,13 @@ asignaturaDocente.docente.label = Docente
 asignaturaDocente.carrera.label = Carrera
 asignaturaDocente.fechaAlta.label = Fecha de Alta
 asignaturaDocente.materias.label = Materias Asignadas
+com.educacion.academico.AsignaturaDocente.carrera.nullable.error = Indique la carrera
+com.educacion.academico.AsignaturaDocente.carrera.blank.error = Indique la carrera
+com.educacion.academico.AsignaturaDocente.anioLectivo.nullable.error = Indique el año lectivo
+com.educacion.academico.AsignaturaDocente.anioLectivo.blank.error = Indique el año lectivo
+com.educacion.academico.AsignaturaDocente.docente.nullable.error = Indique el docente
+com.educacion.academico.AsignaturaDocente.docente.blank.error = Indique el docente
+
 
 
 
