--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -79,6 +79,9 @@ com.educacion.Preinscripcion.delete.restriction = No puede eliminar una Preinscr
 inscripcionmateria.label = Inscripción de Materia
 inscripcionmateria.seleccionalumno = Seleccione el Alumno para la Inscripción de Materia
 
+#AnioLectivo
+anioLectivo.label = Año Lectivo
+
 
 #------------------------------------------------------Seguridad------------------------------------------------------
 #---internationalization del plugin ---
