--- a/saie/grails-app/i18n/messages.properties
+++ b/saie/grails-app/i18n/messages.properties
@@ -1,5 +1,7 @@
 caratula.institucion.nombre=CRUZ ROJA CORDOBA - ARGENTINA
-caratula.institucion.direccion=Mendoza 988 Córdoba
+caratula.institucion.provincia=CORDOBA
+caratula.institucion.ciudad=Córdoba
+caratula.institucion.direccion=Mendoza 988
 caratula.institucion.telefono=Tel: 0381-155465637 CP: 4000
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
