--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -129,11 +129,12 @@ inscripcionMateria.carrera.label = Carrera
 inscripcionMateria.fechaAlta.label = Fecha de Alta
 
 # Inscripcion Matricula
-inscripcionMatricula.label = Inscripción de Matrículas de Alumnos Existentes
+inscripcionMatricula.label = Matrículas
 com.educacion.inscripcion.InscripcionMatricula.error.inscripcionmateria = La Matrícula no tiene ninguna inscripción de materia
 unique.error.com.educacion.alumno.Alumno = Ya existe una Matrícula para este alumno en esta carrera y en este año lectivo
 com.educacion.academico.InscripcionMatricula.inscripcionesmaterias.size.error = No hay inscripciones de materias cargadas
 preinscripcion.update.estado.error = No se puede modificar un ingreso con estado {0}
+inscripcionMatricula.confirmar.button = Confirmar Matrícula
 
 
 
