--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -287,6 +287,8 @@ com.educacion.academico.ExamenCommand.carreraId.blank = Indique una carrera
 com.educacion.academico.ExamenCommand.materiaId.blank = Indique una materia
 com.educacion.academico.ExamenCommand.docenteId.nullable = Indique un docente
 com.educacion.academico.ExamenCommand.docenteId.blank = Indique un docente
+com.educacion.academico.ExamenCommand.titulo.blank = El título no puede ser vacío
+
 
 # AsignaturaDocente
 
