--- a/saie/grails-app/i18n/messages_es.properties
+++ b/saie/grails-app/i18n/messages_es.properties
@@ -251,6 +251,7 @@ docente.numeroDocumento.label = Número de documento
 docente.localidadDomicilio.label = Localidad
 docente.provinciaDomicilio.label = Provincia
 docente.paisDomicilio.label = Pais
+com.eduacion.academico.Docente.id = No existe el Docente {2}
 com.educacion.academico.Docente.numeroDocumento.nullable.error = Número de Documento Obligatorio
 com.educacion.academico.Docente.apellido.blank.error = Apellido es Obligatorio
 com.educacion.academico.Docente.nombre.blank.error = El nombre es Obligatorio
@@ -288,7 +289,7 @@ com.educacion.academico.ExamenCommand.materiaId.blank = Indique una materia
 com.educacion.academico.ExamenCommand.docenteId.nullable = Indique un docente
 com.educacion.academico.ExamenCommand.docenteId.blank = Indique un docente
 com.educacion.academico.ExamenCommand.titulo.blank = El título no puede ser vacío
-
+com.educacion.adademico.ExamenCommand.inscripciones.empty = No existe ninguna inscripción para la materia {0}
 
 # AsignaturaDocente
 
